--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="./style/link-style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
     <title>Producent</title>        
-    <link rel="icon" href="img/producent-logo.png" type="image/x-icon">
+
+    <!-- <link rel="icon" href="img/producent-logo.png" type="image/x-icon"> -->
+
+    <link rel="icon" type="image/x-icon" href="logos_and_Icons/producent-logo.ico">
+
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -92,6 +98,7 @@
 
                 <div class="grid-item searchbar">
                     <i class="fab fa-google search-option" data-url="google.com"></i>
+                    <i class="fab fa-brave search-option" data-url="brave.com"></i>
                     <i class="fab fa-youtube search-option" data-url="youtube.com"></i>
                     <i class="fas fa-file-arrow-down download search-option"></i>
                     <i class="fab fa-edge search-option" data-url="microsoftedge.com"></i>
