trying to solve app bar error

--- a/index.html
+++ b/index.html
@@ -110,24 +110,24 @@
                 </div>
 
                 <div class="grid-item side-appbar">
-                    <div class="app-shortcut"><a href="https://www.udemy.com" target="_blank"><img src="./logos_and_icons/udemy-Logo.png" alt="" class=" UDEMY"></a></div>
-                    <div class="app-shortcut"><a href="https://pwskills.com/learn/course/decode-dsa-with-c/63eb1ae1194b22195fe5d967/lesson/640ec5f7182c67356b4ceef7/?from=%2Flearn%2F&clickText=continue&page_from=my_course_page&section=your_courses&sectionId=640c0fcc182c673cc14cc874&lectureType=sectionResource" target="_blank"><img src="./logos_and_icons/PW.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.google.com" target="_blank"><img src="./logos_and_icons/google.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.facebook.com" target="_blank"><img src="./logos_and_icons/facebook.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.twitter.com" target="_blank"><img src="./logos_and_icons/tw.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.instagram.com" target="_blank"><img src="./logos_and_icons/instagram.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.linkedin.com" target="_blank"><img src="./logos_and_icons/linkedin (1).png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.youtube.com" target="_blank"><img src="./logos_and_icons/youtube.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.fiverr.com" target="_blank"><img src="./logos_and_icons/fiverr.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.github.com" target="_blank"><img src="./logos_and_icons/github.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.spotify.com" target="_blank"><img src="./logos_and_icons/spotify.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.amazon.com" target="_blank"><img src="./logos_and_icons/amazon.png " alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.pinterest.com" target="_blank"><img src="./logos_and_icons/pinterest.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.whatsapp.com" target="_blank"><img src="./logos_and_icons/whatsapp.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.telegram.org" target="_blank"><img src="./logos_and_icons/telegram.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.snapchat.com" target="_blank"><img src="./logos_and_icons/snap.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.medium.com" target="_blank"><img src="./logos_and_icons/medium.png" alt="" class="img-logo"></a></div>
-                    <div class="app-shortcut"><a href="https://www.dribbble.com" target="_blank"><img src="./logos_and_icons/dribbble.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.udemy.com" target="_blank"><img src="/logos_and_icons/udemy-Logo.png" alt="" class=" UDEMY"></a></div>
+                    <div class="app-shortcut"><a href="https://pwskills.com/learn/course/decode-dsa-with-c/63eb1ae1194b22195fe5d967/lesson/640ec5f7182c67356b4ceef7/?from=%2Flearn%2F&clickText=continue&page_from=my_course_page&section=your_courses&sectionId=640c0fcc182c673cc14cc874&lectureType=sectionResource" target="_blank"><img src="/logos_and_icons/PW.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.google.com" target="_blank"><img src="/logos_and_icons/google.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.facebook.com" target="_blank"><img src="/logos_and_icons/facebook.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.twitter.com" target="_blank"><img src="/logos_and_icons/tw.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.instagram.com" target="_blank"><img src="/logos_and_icons/instagram.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.linkedin.com" target="_blank"><img src="/logos_and_icons/linkedin (1).png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.youtube.com" target="_blank"><img src="/logos_and_icons/youtube.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.fiverr.com" target="_blank"><img src="/logos_and_icons/fiverr.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.github.com" target="_blank"><img src="/logos_and_icons/github.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.spotify.com" target="_blank"><img src="/logos_and_icons/spotify.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.amazon.com" target="_blank"><img src="/logos_and_icons/amazon.png " alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.pinterest.com" target="_blank"><img src="/logos_and_icons/pinterest.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.whatsapp.com" target="_blank"><img src="/logos_and_icons/whatsapp.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.telegram.org" target="_blank"><img src="/logos_and_icons/telegram.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.snapchat.com" target="_blank"><img src="/logos_and_icons/snap.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.medium.com" target="_blank"><img src="/logos_and_icons/medium.png" alt="" class="img-logo"></a></div>
+                    <div class="app-shortcut"><a href="https://www.dribbble.com" target="_blank"><img src="/logos_and_icons/dribbble.png" alt="" class="img-logo"></a></div>
                     
                 </div>
 
